# desafio_visie

./: .gitignore  README.md
backend_visie/: Dockerfile  Makefile
backend_visie/src/: .python-version  Makefile  app.py  config.py  exception.py  handlers.py  pyproject.toml
backend_visie/src/visie/: __init__.py
backend_visie/src/visie/infrastructure/database/: database_sql.py
backend_visie/src/visie/infrastructure/repository/: repository.py
backend_visie/src/visie/people/: __init__.py  controller.py  models.py  repository.py  schema.py  service.py
backend_visie/src/visie/tests/: conftest.py
backend_visie/src/visie/tests/people/: test_controller.py  test_service.py
backend_visie/src/visie/utils/: cpf_validator.py  paginate.py
frontend_visie/: package-lock.json  package.json
frontend_visie/src/: main.js
frontend_visie/src/components/TablePeople/: Modal.vue  Table.vue  TableMaster.vue  TableRow.vue  UpdatePerson.vue
frontend_visie/src/components/TablePeople/Modal/: CreatePerson.vue
frontend_visie/src/router/: index.js
frontend_visie/src/views/: PersonView.vue
