[tool.poetry]
name = "desafio-desenvolvedor-python"
version = "0.1.0"
description = ""
authors = ["gustavodanielsw <gustavodanieldetoledo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
dependency-injector = "^4.41.0"
SQLAlchemy = "^1.4.45"
Flask-Bootstrap = "^3.3.7"
marshmallow = "^3.19.0"
Faker = "^15.3.4"
factory-boy = "^3.2.1"
pytest = "^7.2.0"
Flask-Cors = "^3.0.10"
mariadb = "^1.1.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
